---

Encode-JP-Emoji-FB_EMOJI_GMAIL-0.04 (2009-07-05):
  - first release
  - http://emoji4unicode-ll.googlecode.com/svn/trunk/lang/perl/Encode-JP-Emoji-FB_EMOJI_GMAIL/trunk/