@@ -11,4 +11,5 @@ t/01-pod.t
 t/10-synopsis.t
 t/20-utf8.t
 t/21-sjis.t
+t/42-fallback-text.t
 t/EncodeUpdate.pm
