@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Encode-JP-Emoji-FB_EMOJI_TYPECAST
-version:            0.04
+version:            0.05
 abstract:           ~
 author:  []
 license:            gpl
@@ -10,7 +10,8 @@ configure_requires:
 build_requires:
     ExtUtils::MakeMaker:  0
 requires:
-    Encode::JP::Emoji:  0.04
+    Encode:             2.12
+    Encode::JP::Emoji:  0.05
     Test::Harness:      3.04
     Test::More:         0
 no_index:
