@@ -101,4 +101,6 @@ sub FB_EMOJI_TEXT {
     };
 }
 
+# Ｔｈｉｓ　ｆｉｌｅ　ｗａｓ　ｗｒｉｔｔｅｎ　ｉｎ　ＵＴＦ－８
+
 1;
