@@ -1,5 +1,5 @@
 ---
 
-Encode-JP-Emoji-FB_EMOJI_TYPECAST-0.05 (2009-07-05):
-  - first release
+Encode-JP-Emoji-FB_EMOJI_TYPECAST-0.05 (2009-07-06):
+  - first release.
   - http://emoji4unicode-ll.googlecode.com/svn/trunk/lang/perl/Encode-JP-Emoji-FB_EMOJI_TYPECAST/trunk/
