@@ -1,5 +1,10 @@
 ---
 
+Encode-JP-Emoji-0.05 (2009-07-06):
+  - Mapping.pm add some name missed.
+  - Mapping.pm unused properties removed. Ex. \p{InEmojiDocomoCP932}.
+  - FB_EMOJI_TEXT.pm more safe.
+
 Encode-JP-Emoji-0.04 (2009-07-05):
   - encoding lineup revised.
   - x-utf8-e4u-mixed encoding added.
